[gd_scene load_steps=4 format=2]

[ext_resource path="res://HiddenWay.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fantasy Free Game Kit/Background and Tilesets/Forest_Platform_1/images/Ground_Platforms_12.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 128 )

[node name="HiddenWay" type="Area2D"]
script = ExtResource( 1 )

[node name="RightCollider" type="CollisionShape2D" parent="."]
position = Vector2( 128, 128 )
shape = SubResource( 1 )

[node name="UpperSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="LowerSprite" type="Sprite" parent="."]
position = Vector2( 0, 128 )
texture = ExtResource( 2 )
centered = false
flip_v = true
[connection signal="body_entered" from="." to="." method="_on_HiddenWay_body_entered"]
